# stab_rs

./: .gitignore  Cargo.toml  pyproject.toml  pyvenv.cfg  sim_res.hdf5  stab_rs.pyi
.github/workflows/: CI.yml
src/: aero.rs  lib.rs
src/linear/: mod.rs
src/sixdof/: aerodynamics.rs  atmosphere.rs  bullet.rs  mod.rs
src/stanag/: aerodynamics.rs  bullet.rs  mod.rs
src/utils/: aero.rs  custom_vec.rs  env.rs  geometry.rs  mod.rs
src/utils/ode/: ode.rs
stab_rs/: __init__.pyi
stab_rs/geometry/: __init__.py
stab_rs/linear/: __init__.pyi
stab_rs/sixdof/: __init__.pyi
stab_rs/stanag/: __init__.pyi
stab_rs/wind/: __init__.pyi
test/: calc_rot.py  coeffs.json  dimensions.py  for006_coeffs.hdf5  sim_res.hdf5  sim_stanag.hdf5  test.py  test2.py  test_six.py  test_stan.py  wind.py
